infra/k8s/onboarding/choesuna-react-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: choesuna-react-app
  namespace: onboarding
spec:
  selector:
    app: choesuna-react-app
  ports:
    - port: 9000
      targetPort: 9000
